# E-commmerce-streaming-project

./: .gitignore  README.md  docker-compose-kafka-spark-mongodb.yml  docker-compose-kafka-spark.yml  import linecache.py
API-Ingest/Kafka consumer/: consumer.py
API-Ingest/app/: main.py
API-mongo/: build command.txt
API-mongo/app/: main.py
API_Ingest/Kafka consumer/: consumer.py
API_Ingest/api-ingest/: pyproject.toml
API_Ingest/app/: main.py
ApacheSpark/: 01-streaming-kafka-src-dst.ipynb  02-streaming-kafka-src-dst-mongodb.ipynb
Document_store/: pyproject.toml
Document_store/document_store/: __init__.py
Document_store/document_store/API-Ingest/: dockerfile
Document_store/document_store/API-Ingest/app/: main.py
Document_store/document_store/API-mongo/: dockerfile
Document_store/document_store/client/: api-client.py  api_client.py  test_api_client.py
Streamlit/: app.py  streamlit12.py  test_streamlit12.py
client/: api-client.py  test.py  transformer.py
