[tool.poetry]
name = "document-store"
version = "0.1.0"
description = "This manages the dependencies for the document store"
authors = ["Omotosho Ayomide Ayomidemtsh@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
requests = "^2.31.0"
numpy = "^1.26.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
